target/generated-sources/antlr4/AnalisadorSintaticoParser.java
// Generated from AnalisadorSintaticoParser.g4 by ANTLR 4.13.1

package compilador;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AnalisadorSintaticoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, INTEGER=2, BOOLEAN=3, STRING=4, BEGIN=5, END=6, IF=7, THEN=8, 
		ELSE=9, WHILE=10, DO=11, READ=12, VAR=13, FALSE=14, TRUE=15, WRITE=16, 
		OR=17, AND=18, MENOR_IG=19, MAIOR_IG=20, IGUAL=21, DIFERENTE=22, MENOR=23, 
		MAIOR=24, MAIS=25, MENOS=26, VEZES=27, DIV=28, NEGACAO=29, ATRIB=30, PONTO_VIG=31, 
		PONTO=32, DPONTOS=33, VIRGULA=34, ABRE_PAR=35, FECHA_PAR=36, CTE=37, CADEIA=38, 
		ID=39, COMENTARIO=40, ESPACO=41;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_listaDeclaracoes = 2, RULE_declaracaoTipo = 3, 
		RULE_listaIds = 4, RULE_tipo = 5, RULE_blocoComandos = 6, RULE_listaComandos = 7, 
		RULE_comando = 8, RULE_cmdIf = 9, RULE_cmdWhile = 10, RULE_cmdLeitura = 11, 
		RULE_cmdEscrita = 12, RULE_listaEscrita = 13, RULE_itemEscrita = 14, RULE_cmdAtribuicao = 15, 
		RULE_expressao = 16, RULE_expressaoRelacional = 17, RULE_opRelacional = 18, 
		RULE_expressaoAditiva = 19, RULE_expressaoOr = 20, RULE_expressaoAnd = 21, 
		RULE_expressaoMultiplicativa = 22, RULE_expressaoUnaria = 23, RULE_expressaoPrimaria = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "listaDeclaracoes", "declaracaoTipo", "listaIds", 
			"tipo", "blocoComandos", "listaComandos", "comando", "cmdIf", "cmdWhile", 
			"cmdLeitura", "cmdEscrita", "listaEscrita", "itemEscrita", "cmdAtribuicao", 
			"expressao", "expressaoRelacional", "opRelacional", "expressaoAditiva", 
			"expressaoOr", "expressaoAnd", "expressaoMultiplicativa", "expressaoUnaria", 
			"expressaoPrimaria"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'<='", "'>='", "'=='", "'<>'", 
			"'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'~'", "':='", "';'", "'.'", 
			"':'", "','", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "INTEGER", "BOOLEAN", "STRING", "BEGIN", "END", "IF", 
			"THEN", "ELSE", "WHILE", "DO", "READ", "VAR", "FALSE", "TRUE", "WRITE", 
			"OR", "AND", "MENOR_IG", "MAIOR_IG", "IGUAL", "DIFERENTE", "MENOR", "MAIOR", 
			"MAIS", "MENOS", "VEZES", "DIV", "NEGACAO", "ATRIB", "PONTO_VIG", "PONTO", 
			"DPONTOS", "VIRGULA", "ABRE_PAR", "FECHA_PAR", "CTE", "CADEIA", "ID", 
			"COMENTARIO", "ESPACO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnalisadorSintaticoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnalisadorSintaticoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(AnalisadorSintaticoParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(AnalisadorSintaticoParser.ID, 0); }
		public TerminalNode PONTO_VIG() { return getToken(AnalisadorSintaticoParser.PONTO_VIG, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public BlocoComandosContext blocoComandos() {
			return getRuleContext(BlocoComandosContext.class,0);
		}
		public TerminalNode PONTO() { return getToken(AnalisadorSintaticoParser.PONTO, 0); }
		public TerminalNode EOF() { return getToken(AnalisadorSintaticoParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(PROGRAM);
			setState(51);
			match(ID);
			setState(52);
			match(PONTO_VIG);
			setState(53);
			declaracoes();
			setState(54);
			blocoComandos();
			setState(55);
			match(PONTO);
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(AnalisadorSintaticoParser.VAR, 0); }
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				match(VAR);
				setState(60);
				listaDeclaracoes();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaDeclaracoesContext extends ParserRuleContext {
		public DeclaracaoTipoContext declaracaoTipo() {
			return getRuleContext(DeclaracaoTipoContext.class,0);
		}
		public ListaDeclaracoesContext listaDeclaracoes() {
			return getRuleContext(ListaDeclaracoesContext.class,0);
		}
		public ListaDeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracoes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitListaDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDeclaracoesContext listaDeclaracoes() throws RecognitionException {
		ListaDeclaracoesContext _localctx = new ListaDeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listaDeclaracoes);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				declaracaoTipo();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				declaracaoTipo();
				setState(65);
				listaDeclaracoes();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoTipoContext extends ParserRuleContext {
		public ListaIdsContext listaIds() {
			return getRuleContext(ListaIdsContext.class,0);
		}
		public TerminalNode DPONTOS() { return getToken(AnalisadorSintaticoParser.DPONTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PONTO_VIG() { return getToken(AnalisadorSintaticoParser.PONTO_VIG, 0); }
		public DeclaracaoTipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoTipo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitDeclaracaoTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoTipoContext declaracaoTipo() throws RecognitionException {
		DeclaracaoTipoContext _localctx = new DeclaracaoTipoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracaoTipo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			listaIds();
			setState(70);
			match(DPONTOS);
			setState(71);
			tipo();
			setState(72);
			match(PONTO_VIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaIdsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AnalisadorSintaticoParser.ID, 0); }
		public TerminalNode VIRGULA() { return getToken(AnalisadorSintaticoParser.VIRGULA, 0); }
		public ListaIdsContext listaIds() {
			return getRuleContext(ListaIdsContext.class,0);
		}
		public ListaIdsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaIds; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitListaIds(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaIdsContext listaIds() throws RecognitionException {
		ListaIdsContext _localctx = new ListaIdsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listaIds);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(ID);
				setState(76);
				match(VIRGULA);
				setState(77);
				listaIds();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(AnalisadorSintaticoParser.INTEGER, 0); }
		public TerminalNode BOOLEAN() { return getToken(AnalisadorSintaticoParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(AnalisadorSintaticoParser.STRING, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 28L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoComandosContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(AnalisadorSintaticoParser.BEGIN, 0); }
		public ListaComandosContext listaComandos() {
			return getRuleContext(ListaComandosContext.class,0);
		}
		public TerminalNode END() { return getToken(AnalisadorSintaticoParser.END, 0); }
		public BlocoComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocoComandos; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitBlocoComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoComandosContext blocoComandos() throws RecognitionException {
		BlocoComandosContext _localctx = new BlocoComandosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_blocoComandos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(BEGIN);
			setState(83);
			listaComandos();
			setState(84);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaComandosContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<TerminalNode> PONTO_VIG() { return getTokens(AnalisadorSintaticoParser.PONTO_VIG); }
		public TerminalNode PONTO_VIG(int i) {
			return getToken(AnalisadorSintaticoParser.PONTO_VIG, i);
		}
		public ListaComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaComandos; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitListaComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaComandosContext listaComandos() throws RecognitionException {
		ListaComandosContext _localctx = new ListaComandosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listaComandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				comando();
				setState(87);
				match(PONTO_VIG);
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 549755884704L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public CmdIfContext cmdIf() {
			return getRuleContext(CmdIfContext.class,0);
		}
		public CmdWhileContext cmdWhile() {
			return getRuleContext(CmdWhileContext.class,0);
		}
		public CmdLeituraContext cmdLeitura() {
			return getRuleContext(CmdLeituraContext.class,0);
		}
		public CmdEscritaContext cmdEscrita() {
			return getRuleContext(CmdEscritaContext.class,0);
		}
		public CmdAtribuicaoContext cmdAtribuicao() {
			return getRuleContext(CmdAtribuicaoContext.class,0);
		}
		public BlocoComandosContext blocoComandos() {
			return getRuleContext(BlocoComandosContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comando);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				cmdIf();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				cmdWhile();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				cmdLeitura();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				cmdEscrita();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				cmdAtribuicao();
				}
				break;
			case BEGIN:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				blocoComandos();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(AnalisadorSintaticoParser.IF, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode THEN() { return getToken(AnalisadorSintaticoParser.THEN, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(AnalisadorSintaticoParser.ELSE, 0); }
		public CmdIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitCmdIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdIfContext cmdIf() throws RecognitionException {
		CmdIfContext _localctx = new CmdIfContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmdIf);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(IF);
				setState(102);
				expressao();
				setState(103);
				match(THEN);
				setState(104);
				comando();
				setState(105);
				match(ELSE);
				setState(106);
				comando();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(IF);
				setState(109);
				expressao();
				setState(110);
				match(THEN);
				setState(111);
				comando();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdWhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(AnalisadorSintaticoParser.WHILE, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode DO() { return getToken(AnalisadorSintaticoParser.DO, 0); }
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public CmdWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdWhile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitCmdWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdWhileContext cmdWhile() throws RecognitionException {
		CmdWhileContext _localctx = new CmdWhileContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cmdWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(WHILE);
			setState(116);
			expressao();
			setState(117);
			match(DO);
			setState(118);
			comando();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdLeituraContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(AnalisadorSintaticoParser.READ, 0); }
		public TerminalNode ABRE_PAR() { return getToken(AnalisadorSintaticoParser.ABRE_PAR, 0); }
		public ListaIdsContext listaIds() {
			return getRuleContext(ListaIdsContext.class,0);
		}
		public TerminalNode FECHA_PAR() { return getToken(AnalisadorSintaticoParser.FECHA_PAR, 0); }
		public CmdLeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLeitura; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitCmdLeitura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdLeituraContext cmdLeitura() throws RecognitionException {
		CmdLeituraContext _localctx = new CmdLeituraContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cmdLeitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(READ);
			setState(121);
			match(ABRE_PAR);
			setState(122);
			listaIds();
			setState(123);
			match(FECHA_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdEscritaContext extends ParserRuleContext {
		public TerminalNode WRITE() { return getToken(AnalisadorSintaticoParser.WRITE, 0); }
		public TerminalNode ABRE_PAR() { return getToken(AnalisadorSintaticoParser.ABRE_PAR, 0); }
		public ListaEscritaContext listaEscrita() {
			return getRuleContext(ListaEscritaContext.class,0);
		}
		public TerminalNode FECHA_PAR() { return getToken(AnalisadorSintaticoParser.FECHA_PAR, 0); }
		public CmdEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscrita; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitCmdEscrita(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdEscritaContext cmdEscrita() throws RecognitionException {
		CmdEscritaContext _localctx = new CmdEscritaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_cmdEscrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(WRITE);
			setState(126);
			match(ABRE_PAR);
			setState(127);
			listaEscrita();
			setState(128);
			match(FECHA_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaEscritaContext extends ParserRuleContext {
		public ItemEscritaContext itemEscrita() {
			return getRuleContext(ItemEscritaContext.class,0);
		}
		public TerminalNode VIRGULA() { return getToken(AnalisadorSintaticoParser.VIRGULA, 0); }
		public ListaEscritaContext listaEscrita() {
			return getRuleContext(ListaEscritaContext.class,0);
		}
		public ListaEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaEscrita; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitListaEscrita(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaEscritaContext listaEscrita() throws RecognitionException {
		ListaEscritaContext _localctx = new ListaEscritaContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_listaEscrita);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				itemEscrita();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				itemEscrita();
				setState(132);
				match(VIRGULA);
				setState(133);
				listaEscrita();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItemEscritaContext extends ParserRuleContext {
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode CADEIA() { return getToken(AnalisadorSintaticoParser.CADEIA, 0); }
		public ItemEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_itemEscrita; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalisadorSintaticoParserVisitor ) return ((AnalisadorSintaticoParserVisitor<? extends T>)visitor).visitItemEscrita(this);
			else return visitor.visitChildren(this);
		}
	}
